sandbox-codebase/objects/zkmulti__HazMatDetails__c/fields/zkmulti__NetExplosiveAmount__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__NetExplosiveAmount__c</fullName>
    <label>Net Explosive Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>