sandbox-codebase/objects/zkmulti__HazMatDetails__c/fields/zkmulti__NetExplosiveType__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__NetExplosiveType__c</fullName>
    <description>The total mass of the contained explosive substances, without the mass of any casings, bullets, shells, etc.</description>
    <inlineHelpText>The total mass of the contained explosive substances, without the mass of any casings, bullets, shells, etc.</inlineHelpText>
    <label>Net Explosive Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>