sandbox-codebase/objects/zkmulti__HazMatDetails__c/fields/zkmulti__NetExplosiveUnits__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__NetExplosiveUnits__c</fullName>
    <label>Net Explosive Units</label>
    <length>10</length>
    <type>Text</type>
</CustomField>