sandbox-codebase/objects/zkmulti__HazMatDetails__c/fields/zkmulti__NumberOfContainers__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__NumberOfContainers__c</fullName>
    <label>Number Of Containers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>