sandbox-codebase/objects/zkmulti__HazMatDetails__c/fields/zkmulti__PackagingTypeQuantity__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__PackagingTypeQuantity__c</fullName>
    <label>Packaging Type Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>