sandbox-codebase/objects/zkmulti__HazMatDetails__c/fields/zkmulti__SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SequenceNumber__c</fullName>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>